fixes to home page to display correctly on mobile

--- a/app/assets/stylesheets/application/components/tags.scss
+++ b/app/assets/stylesheets/application/components/tags.scss
@@ -4,8 +4,9 @@
     border: 2px solid $darkest-teal;
     border-radius: 10px;
     color: $darkest-teal;
-    line-height: 3rem;
-    margin-right: 2rem;
+    display: inline-block;
+    line-height: 2rem;
+    margin: 0 2rem 1rem 0;
     padding: 0.2rem 0.5rem;
     text-decoration: none;
     white-space: nowrap;
